syntax = "proto3";

package protobuf;

option go_package = "/notifier;notifierproto";

service NotifierService {
    rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
    rpc SendAllEmail(SendAllEmailRequest) returns (SendAllEmailResponse);
}

message SendEmailRequest {
    string to = 1;
    string subject = 2;
    string body = 3;
}

message SendEmailResponse {
    bool success = 1;
}

message SendAllEmailRequest {
    string subject = 1;
    string body = 2;
}

message SendAllEmailResponse {
    bool success = 1;
}